--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ remote_theme: pmarsceill/just-the-docs
 title: Just the Docs
 description: A Jekyll theme for documentation
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://just-the-docs.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://lakp44.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 repository: just-the-docs/just-the-docs # for github-metadata
 
 permalink: pretty
