--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Just the Docs
 description: A Jekyll theme for documentation
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://lakp44.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-repository: just-the-docs/just-the-docs # for github-metadata
+repository: lakP44/lakP44.github.io # for github-metadata
 
 permalink: pretty
 
